BUG 6814 Adjustment suggest,adding a scrollbar for display more items.

--- a/workflow/engine/skinEngine/base/css/style.css
+++ b/workflow/engine/skinEngine/base/css/style.css
@@ -1544,6 +1544,7 @@ div.autosuggest
 	background-position: top;
 	background-repeat: no-repeat;
 	padding: 8px 2px 0 3px;
+  overflow: auto;
 	z-index:1000;
 }
 
